Fix spacing for the place order buttons from other payment methods

--- a/css/checkout-layout-123.css
+++ b/css/checkout-layout-123.css
@@ -1406,10 +1406,11 @@ div.woocommerce form .fc-step__substep[data-substep-id="shipping_address"] {
   margin-bottom: 0; }
 
 .fc-place-order {
+  padding: 30px 0;
   text-align: center; }
 
 .fc-wrapper .fc-place-order .fc-place-order-button {
-  margin: 30px auto 30px;
+  margin: 0;
   width: 100%;
   max-width: 600px;
   min-height: 50px;
